--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Przewidywanie Pogody</title>
+    </head>
+    <body>
+<h1>Przewidywanie Pogody</h1>
 
+    </body>
+</html>
