--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Przewidywanie Pogody</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
 <h1>Przewidywanie Pogody</h1>
-
+<script type="text/javascript" src="script.js"></script>
     </body>
 </html>
