--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
 <h1>Przewidywanie Pogody</h1>
+        <input type="text" placeholder="W którym mieście?" id="city-input">
 <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
