--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <input type="text" placeholder="W którym mieście?" id="city-input" name="city-input" required><br><br>
             <button type="Submit">Wyślij</button>
         </form>
-        <span id="weather-result"></span>
+        <div id="weather-result"></div>
 <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
