--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 <h1>Przewidywanie Pogody</h1>
-        <form action="/submit-data" method="post" id="weather-form">
+        <form method="post" id="weather-form">
             <label for="Miasto">Miasto</label>
             <input type="text" placeholder="W którym mieście?" id="city-input" name="city-input" required><br><br>
             <button type="Submit">Wyślij</button>
