--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
 <h1>Przewidywanie Pogody</h1>
         <form method="post" id="weather-form">
-            <label for="Miasto">Miasto</label>
+            <label for="Miasto">Miasto:</label>
             <input type="text" placeholder="W którym mieście?" id="city-input" name="city-input" required><br><br>
             <button type="Submit">Wyślij</button>
         </form>
