Naprawiono duży błąd gramatyczny

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-<h1>Przewidffffffffffffffffffffffffffffffody</h1>
+<h1>Przewidywanie pogody</h1>
         <form method="post" id="weather-form">
             <label for="Miasto">Miasto:</label>
             <input type="text" placeholder="W którym mieście?" id="city-input" name="city-input" required><br><br>
